--- a/ssdlite_mobiledet_transfer_learning_cat_vs_dog.ipynb
+++ b/ssdlite_mobiledet_transfer_learning_cat_vs_dog.ipynb
@@ -452,7 +452,7 @@
       },
       "source": [
         "# Install tflite_runtime package to evaluate the model.\n",
-        "!pip3 install https://dl.google.com/coral/python/tflite_runtime-2.1.0.post1-cp36-cp36m-linux_x86_64.whl  "
+        "!pip3 install https://github.com/google-coral/pycoral/releases/download/release-frogfish/tflite_runtime-2.5.0-cp36-cp36m-linux_x86_64.whl  "
       ],
       "execution_count": null,
       "outputs": []
